[gd_scene load_steps=8 format=2]

[ext_resource path="res://Audio/VolumeSliders/VolumeSliders.gd" type="Script" id=1]
[ext_resource path="res://Audio/SFX/Ambience/FF_Ambient_RainAndThunder/FF_Ambient_RainAndThunder.tscn" type="PackedScene" id=2]
[ext_resource path="res://Audio/VolumeSliders/SFXSlider.gd" type="Script" id=3]
[ext_resource path="res://Audio/VolumeSliders/AmbienceSlider.gd" type="Script" id=4]
[ext_resource path="res://Audio/VolumeSliders/MusicSlider.gd" type="Script" id=5]
[ext_resource path="res://Audio/VolumeSliders/MasterSlider.gd" type="Script" id=6]

[sub_resource type="Theme" id=1]

[node name="VolumeSliders" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -1.15912
offset_right = -813.0
offset_bottom = -141.159
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="."]
offset_left = 410.0
offset_top = 282.0
offset_right = 728.0
offset_bottom = 710.0
theme = SubResource( 1 )
color = Color( 0.486275, 0.356863, 0.243137, 0.741176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterSlider" type="HSlider" parent="."]
offset_left = 454.286
offset_top = 310.47
offset_right = 686.286
offset_bottom = 374.47
max_value = 1.2
step = 0.01
value = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MasterSlider"]
offset_right = 40.0
offset_bottom = 14.0
text = "Master"

[node name="ButtonLeft" type="Button" parent="MasterSlider"]
offset_left = -24.0
offset_top = 19.0
offset_right = -6.0
offset_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRight" type="Button" parent="MasterSlider"]
offset_left = 234.996
offset_top = 19.0
offset_right = 252.996
offset_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="."]
offset_left = 454.286
offset_top = 406.47
offset_right = 686.286
offset_bottom = 470.47
max_value = 1.2
step = 0.01
value = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MusicSlider"]
offset_right = 40.0
offset_bottom = 14.0
text = "Music"

[node name="ButtonLeft" type="Button" parent="MusicSlider"]
offset_left = -24.0
offset_top = 19.0
offset_right = -6.0
offset_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRight" type="Button" parent="MusicSlider"]
offset_left = 234.996
offset_top = 19.0
offset_right = 252.996
offset_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXSlider" type="HSlider" parent="."]
offset_left = 454.286
offset_top = 502.47
offset_right = 686.286
offset_bottom = 566.47
max_value = 1.2
step = 0.01
value = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SFXSlider"]
offset_right = 40.0
offset_bottom = 14.0
text = "SFX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLeft" type="Button" parent="SFXSlider"]
offset_left = -24.0
offset_top = 19.0
offset_right = -6.0
offset_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRight" type="Button" parent="SFXSlider"]
offset_left = 234.996
offset_top = 19.0
offset_right = 252.996
offset_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmbienceSlider" type="HSlider" parent="."]
offset_left = 454.286
offset_top = 606.47
offset_right = 686.286
offset_bottom = 670.47
max_value = 1.2
step = 0.01
value = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AmbienceSlider"]
offset_right = 40.0
offset_bottom = 14.0
text = "Ambience"

[node name="ButtonLeft" type="Button" parent="AmbienceSlider"]
offset_left = -24.0
offset_top = 19.0001
offset_right = -6.0
offset_bottom = 39.0001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRight" type="Button" parent="AmbienceSlider"]
offset_left = 234.996
offset_top = 19.0001
offset_right = 252.996
offset_bottom = 39.0001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RainAndThunder" parent="." instance=ExtResource( 2 )]
[connection signal="value_changed" from="MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="pressed" from="MasterSlider/ButtonLeft" to="MasterSlider" method="_on_ButtonLeft_pressed"]
[connection signal="pressed" from="MasterSlider/ButtonRight" to="MasterSlider" method="_on_ButtonRight_pressed"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="pressed" from="MusicSlider/ButtonLeft" to="MusicSlider" method="_on_ButtonLeft_pressed"]
[connection signal="pressed" from="MusicSlider/ButtonRight" to="MusicSlider" method="_on_ButtonRight_pressed"]
[connection signal="value_changed" from="SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="pressed" from="SFXSlider/ButtonLeft" to="SFXSlider" method="_on_ButtonLeft_pressed"]
[connection signal="pressed" from="SFXSlider/ButtonRight" to="SFXSlider" method="_on_ButtonRight_pressed"]
[connection signal="value_changed" from="AmbienceSlider" to="." method="_on_AmbienceSlider_value_changed"]
[connection signal="pressed" from="AmbienceSlider/ButtonLeft" to="AmbienceSlider" method="_on_ButtonLeft_pressed"]
[connection signal="pressed" from="AmbienceSlider/ButtonRight" to="AmbienceSlider" method="_on_ButtonRight_pressed"]
